# bydle

./: .gitignore  LICENSE  README.md  app.py  bydle.ipynb  bydle.py  environment.yml  pyproject.toml  requirements.txt
bydle/: gui.py  helpers.py  models.py
src/: app.py
src/bydle/: gui.py  helpers.py  models.py
