[project]
authors = [{name = "Michał Chmurkowski"}]
dependencies = [
    "pandas",
    "requests"
]
description = "ByDLe to prosty skrypt Python z wizualnym interfejsem, ułatwiający pobieranie danych z Banku Danych Lokalnych GUS dla jednostek terytorialnych."
name = "bydle"
requires-python = ">=3.9"
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mchmurkowski/bydle"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
bydle = { path = ".", editable = true }

[tool.pixi.tasks]
