[project]
authors = [{ name = "Michał Chmurkowski" }]
dependencies = ["pandas", "requests"]
description = "ByDLe to prosty skrypt Python z wizualnym interfejsem, ułatwiający pobieranie danych z Banku Danych Lokalnych GUS dla jednostek terytorialnych."
name = "bydle"
requires-python = ">=3.9"
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mchmurkowski/bydle"

[project.optional-dependencies]
dev = ["vermin>=1.6.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
bydle = { path = ".", editable = true }

[tool.pixi.tasks]
app = { cmd = "python app.py", cwd = "src" }

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.feature.dev.tasks]
fmt = { cmd = "ruff format", cwd = "src" }
lint = { cmd = "ruff check", cwd = "src" }
fix = { cmd = "ruff check --fix", cwd = "src" }
vermin = "vermin --eval-annotations --backport dataclasses --backport typing src/"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.environments]
dev = { features = ["dev"], no-default-feature = true }
py39 = { features = ["py39"] }
